src/index.css
/* https://rsms.me/inter/ */
@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 100;
  font-display: swap;
  src: url('./fonts/Inter-Thin.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Thin.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 100;
  font-display: swap;
  src: url('./fonts/Inter-ThinItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ThinItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 200;
  font-display: swap;
  src: url('./fonts/Inter-ExtraLight.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ExtraLight.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 200;
  font-display: swap;
  src: url('./fonts/Inter-ExtraLightItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ExtraLightItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url('./fonts/Inter-Light.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Light.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: url('./fonts/Inter-LightItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-LightItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('./fonts/Inter-Regular.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-Regular.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url('./fonts/Inter-Italic.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Italic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url('./fonts/Inter-Medium.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Medium.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 500;
  font-display: swap;
  src: url('./fonts/Inter-MediumItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-MediumItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url('./fonts/Inter-SemiBold.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-SemiBold.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 600;
  font-display: swap;
  src: url('./fonts/Inter-SemiBoldItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-SemiBoldItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url('./fonts/Inter-Bold.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Bold.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: url('./fonts/Inter-BoldItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-BoldItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 800;
  font-display: swap;
  src: url('./fonts/Inter-ExtraBold.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ExtraBold.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 800;
  font-display: swap;
  src: url('./fonts/Inter-ExtraBoldItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-ExtraBoldItalic.woff?v=3.19') format('woff');
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 900;
  font-display: swap;
  src: url('./fonts/Inter-Black.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Black.woff?v=3.19') format('woff');
}
@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 900;
  font-display: swap;
  src: url('./fonts/Inter-BlackItalic.woff2?v=3.19') format('woff2'),
    url('./fonts/Inter-BlackItalic.woff?v=3.19') format('woff');
}

/* -------------------------------------------------------
Variable font.
Usage:

  html { font-family: 'Inter', sans-serif; }
  @supports (font-variation-settings: normal) {
    html { font-family: 'Inter var', sans-serif; }
  }
*/
@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: normal;
  font-named-instance: 'Regular';
  src: url('./fonts/Inter-roman.var.woff2?v=3.19') format('woff2');
}
@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: italic;
  font-named-instance: 'Italic';
  src: url('./fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
}

:root {
  --bs-font-sans-serif: 'Inter', sans-serif;
}

@supports (font-variation-settings: normal) {
  :root {
    --bs-font-sans-serif: 'Inter var', sans-serif;
  }
}

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  color: #444;
}

html,
body,
#root {
  min-height: 100vh;
}

#root {
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
}

.qr-container {
  margin: 0 0 1rem -1rem;
}

.qr-container h5 {
  display: none;
}

/* Start Navbar Styles */

.center-nav-link {
  font-weight: 600 !important;
}

.center-nav-link > div {
  position: relative;
}

@media only screen and (min-width: 768px) {
  .flex-1 {
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: 0 !important;
  }

  .center-nav-link {
    min-width: 80px;
    padding: auto 0 12px 0 !important;
  }

  .center-nav-link.active {
    padding: 12px 0 10px 0 !important;
    border-bottom: 2px solid black;
  }
}

.activity-indicator {
  --size: 6px;
  position: absolute;
  right: calc(var(--size) * -1);
  height: var(--size);
  width: var(--size);
  border-radius: 50%;
}

.activity-indicator-off {
  background-color: #bbbbbb;
}

.activity-indicator-on {
  animation-name: activity-indicator-pulse;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in;
}

@keyframes activity-indicator-pulse {
  0% {
    background-color: rgba(39, 174, 96, 0.2);
  }
  50% {
    background-color: rgba(39, 174, 96, 1);
  }
  100% {
    background-color: rgba(39, 174, 96, 0.2);
  }
}

/* End Navbar Styles */

/* Theme overrides */
:root[data-theme='dark'] {
  --bs-body-color-rgb: var(--bs-white);
  --bs-body-bg-rgb: 33, 37, 41;
  --bs-body-color: var(--bs-white);
  --bs-body-bg: var(--bs-gray-900);
  --bs-gray-dark: #16191c;
  --bs-black: #000;
}

:root[data-theme='dark'] * {
  border-color: var(--bs-gray-800) !important;
}

:root[data-theme='dark'] a.nav-link {
  border-color: transparent !important;
}

:root[data-theme='dark'] a.nav-link.active {
  border-color: white !important;
}

:root[data-theme='dark'] .card {
  background-color: var(--bs-gray-dark) !important;
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] .btn-dark {
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-dark:hover {
  background-color: var(--bs-gray-dark);
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] .accordion-item {
  background: transparent !important;
}

:root[data-theme='dark'] .accordion-button,
:root[data-theme='dark'] .btn-outline-dark {
  color: var(--bs-white);
  background: transparent !important;
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-outline-dark:hover {
  background-color: var(--bs-gray-dark) !important;
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] code {
  color: var(--bs-gray-300);
}

